# gs

./: Cargo.toml  LICENSE  README.md  justfile
src/: main.rs
src/modules/: mod.rs  show.rs  utils.rs
src/modules/response_models/: author_page.rs  mod.rs  utils.rs
