[package]
name = "gs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
cli-table = "0.4.9"
colored = "3.0.0"
duckdb = { version = "1.2.0", features = ["bundled"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = "1.0.218"
serde_json = "1.0.140"
